--- a/icotools/templates/ratings_mp4.html
+++ b/icotools/templates/ratings_mp4.html
@@ -1,8 +1,4 @@
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script>
-<meta http-equiv="Cache-Control" content="no-cache, no-store, must-revalidate" />
-<meta http-equiv="Pragma" content="no-cache" />
-<meta http-equiv="Expires" content="0" />
-
 <style>
 .trialDiv {
   padding-left: 20px;
@@ -131,16 +127,10 @@ input[type=submit] {
 #likert { text-align:center; }
 #likert td { width: 300px; }
 
-.player {
-outline: none;
-}
-
+.player {width: 200px}
 
 </style>
-<div id="about">
-<h3 style="text-align: center">About</h3>
 INSTRUCTIONS
-</div>
 
 <div id="audiotest">
 <h2>Headphone check</h2>
@@ -183,7 +173,7 @@ Your browser does not support the audio element.
 </div>
 
 <div id="instructions">
-    <p style="text-align:center"> Thank you for wearing headphones. You may now continue to the experiment.</p>
+    <p style="text-align:center"> Thank you for wearing headphones. You may now continue to the task. </p>
 </div>
 <div id = "participateButton">
 <a href="#" id="participate">Participate</a>
@@ -200,102 +190,64 @@ Your browser does not support the audio element.
 <!---TRIAL START!---->
 
 <div id="trial1" class="trialDiv">
-<p style="text-align: center">Play the videos below and look at the gestures.</p>
 <p style="text-align: center" id='trans1'></p>
 <input type="hidden" name="chosentrans1" value="" id="chosentrans1">
-<table id="likert">
-<tr>
-<td><video width="320" height="240" id='realplayer-1' class="player" controls controlsList="nodownload" muted>
-  <source src="ANSWER_MEDIA" type="video/mp4">
-Your browser does not support the audio element.</video></td>
-<td><video width="320" height="240" id='foilplayer-1' class="player" controls controlsList="nodownload" muted>
-  <source src="https://www.honestcookingblog.com/videos/nikoniko.mp4" type="video/mp4">
-Your browser does not support the audio element.</video></td>
-</tr>
-<input type="hidden" name="chosenfoil1" value="" id="chosenfoil1">
-<tr>
-<td>A</td>
-<td>B</td>
-</tr>
-  </table>
+<p style="text-align: center">
+
+<video width="320" height="240" id='player1' class="player" controls controlsList="nodownload" muted>
+  <source src="SOUNDFILE" type="video/mp4">
+Your browser does not support the video element.</video>
+
+</p>
 </div>
 <div id="options1" class="optionsDiv">
-<br>
-<br>
-<p style="text-align: center" id='ques1'></p>
+<p style="text-align: center">Do you think there is a resemblance between the word and its meaning?</p>
+
 <table id="likert">
      <tr>
-         <td><input type="radio" class="responseButton" name="q1" value="A" /></td>
-         <td><input type="radio" class="responseButton" name="q1" value="B" /></td>
+	     <td>No resemblance</td>
+         <td><input type="radio" class="responseButton" name="q1" value="0" /></td>
+         <td><input type="radio" class="responseButton" name="q1" value="1" /></td>
+         <td><input type="radio" class="responseButton" name="q1" value="2" /></td>
+         <td><input type="radio" class="responseButton" name="q1" value="3" /></td>
+		 <td><input type="radio" class="responseButton" name="q1" value="4" /></td>
+         <td><input type="radio" class="responseButton" name="q1" value="5" /></td>
+         <td><input type="radio" class="responseButton" name="q1" value="6" /></td>
+		 <td>Strong resemblance</td>
+
      </tr>
      <tr>
-         <td>A</td>
-         <td>B</td>
+         <td></td>
+         <td>0</td>
+         <td>1</td>
+         <td>2</td>
+         <td>3</td>
+		 <td>4</td>
+         <td>5</td>
+         <td>6</td>
+         <td></td>
+
      </tr>
   </table>
     <input type="hidden" name="rt1" value="0" id="reactionTime1">
 </div>
-
-<!---EVEN TRIAL!---->
-
-<div id="trial1" class="trialDiv">
-<p style="text-align: center">Play the videos below and look at the gestures.</p>
-<p style="text-align: center" id='trans1'></p>
-<input type="hidden" name="chosentrans1" value="" id="chosentrans1">
-<table id="likert">
-<tr>
-<td><video width="320" height="240" id='foilplayer-1' class="player" controls controlsList="nodownload" muted>
-  <source src="https://www.honestcookingblog.com/videos/nikoniko.mp4" type="video/mp4">
-Your browser does not support the audio element.</video></td>
-<td><video width="320" height="240" id='realplayer-1' class="player" controls controlsList="nodownload" muted>
-  <source src="ANSWER_MEDIA" type="video/mp4">
-Your browser does not support the audio element.</video></td>
-</tr>
-<input type="hidden" name="chosenfoil1" value="" id="chosenfoil1">
-<tr>
-<td>A</td>
-<td>B</td>
-</tr>
-  </table>
-</div>
-<div id="options1" class="optionsDiv">
-<br>
-<br>
-<p style="text-align: center" id='ques1'></p>
-<table id="likert">
-     <tr>
-         <td><input type="radio" class="responseButton" name="q1" value="A" /></td>
-         <td><input type="radio" class="responseButton" name="q1" value="B" /></td>
-     </tr>
-     <tr>
-         <td>A</td>
-         <td>B</td>
-     </tr>
-  </table>
-    <input type="hidden" name="rt1" value="0" id="reactionTime1">
-</div>
-
 
 <!---TRIAL END!---->
 
 
 <div id="exitsurvey">
 <h2 style="text-align:center">Thank you!</h2>
-OUTRO_QUESTIONS
+<!---OUTRO_QUESTIONS---->
 <div style="text-align:center">
 <p><input type="submit" name="submit"></p>
 </div>
 
 </div>
 
+<!--POST EXPERIMENT INFORMATION COLLECTION-->
+<!--Include a short text description of the experiment to check people were paying attention-->
 <script>
-$.ajaxSetup({
-  cache: false
-});
-
-var allfoils=[[],[]];
 var alltrans=[[],[]];
-var foil_choices=[];
 var trans_choices=[];
 
 var i;
@@ -305,11 +257,6 @@ for (i=0;i<2;i++) {
 	transchoice=trans[Math.floor(Math.random()*trans.length)];
 	trans_choices.push(transchoice);
 	$('#chosentrans'+(i+1)).attr("value",transchoice)
-	//Choose a foil
-	foils=allfoils[i];
-	foilchoice=foils[Math.floor(Math.random()*foils.length)];
-	foil_choices.push(foilchoice);
-	$('#chosenfoil'+(i+1)).attr("value",foilchoice)
 }
 
 //REMEMBER TO UPDATE THE ARRAY YOU'RE SHUFFLING 
@@ -319,9 +266,7 @@ var curTrial=0;
 //REMEMBER TO UPDATE THE NUMBER OF TRIALS BELOW 
 var nTrials=6;
 var startTrialTime;
-// The firstgo variable is to allow them to play the media multiple times without resetting the reaction time count
 var firstgo='True';
-
 
 function audioplayed() {
 	if(firstgo=='True'){
@@ -344,12 +289,12 @@ function buttonClicked() {
 		$('#exitsurvey').show();
 	} else {	
 		$('#trial'+trialOrder[curTrial]).show();
-		firstgo='True';
+		firstgo='True'
 	}
 }
 function showFirstTrial() {
 	$('#trial'+trialOrder[0]).show();
-	
+
 }
 
 function showAudioTest() {
@@ -386,15 +331,14 @@ function showpractice() {
 	$('#startexperimentButton').hide();
 	$('#trial1').show();
 	}
-	
-	
+
 function easystart() {
 	$('#about').hide();
 	$('#participateButton').hide();
 	$('#trial1').show();
 
 }
-
+	
 function tryagain() {
   $('#errormessage').hide()
   $('#audiotest').show()
@@ -406,24 +350,15 @@ function shuffle(o){
     return o;
 }
 
-function showoptions(){
-$('#realplayer-'+trialOrder[curTrial]).bind("ended", function(){
-$('#foilplayer-'+trialOrder[curTrial]).bind("ended",audioplayed)
-});
-$('#foilplayer-'+trialOrder[curTrial]).bind("ended", function(){
-$('#realplayer-'+trialOrder[curTrial]).bind("ended",audioplayed)
-});
-}
+$('#participate').click(showAudioTest)
+$('#again').click(tryagain)
+
+$('#continue').click(processAudioTest)
+$('#startexperiment').click(showpractice)
 
 
-$('#participate').click(showAudioTest);
-$('#again').click(tryagain);
-
-$('#continue').click(processAudioTest);
-$('#startexperiment').click(showpractice);
-
-$('.player').bind('play',showoptions);
-$('.responseButton').click(buttonClicked);
+$('.player').bind("ended",audioplayed)
+$('.responseButton').click(buttonClicked)
 
 
 </script>
