--- a/icotools/templates/ratings_mp3.html
+++ b/icotools/templates/ratings_mp3.html
@@ -130,7 +130,10 @@ input[type=submit] {
 .player {width: 200px}
 
 </style>
+<div id="about">
+<h3 style="text-align: center">About</h3>
 INSTRUCTIONS
+</div>
 
 <div id="audiotest">
 <h2>Headphone check</h2>
