--- a/icotools/templates/ratings_mp4.html
+++ b/icotools/templates/ratings_mp4.html
@@ -130,7 +130,10 @@ input[type=submit] {
 .player {width: 200px}
 
 </style>
+<div id="about">
+<h3 style="text-align: center">About</h3>
 INSTRUCTIONS
+</div>
 
 <div id="audiotest">
 <h2>Headphone check</h2>
@@ -201,7 +204,7 @@ Your browser does not support the video element.</video>
 </p>
 </div>
 <div id="options1" class="optionsDiv">
-<p style="text-align: center">Do you think there is a resemblance between the word and its meaning?</p>
+<p style="text-align: center">Do you think there is a resemblance between the gesture and its meaning?</p>
 
 <table id="likert">
      <tr>
