--- a/icotools/templates/instructions_guessing_gestures_japanese.html
+++ b/icotools/templates/instructions_guessing_gestures_japanese.html
@@ -1,2 +1,6 @@
+<!-- 
+English translation:
+We are interested in how well people can guess the meanings of gestures. In this experiment, you will be asked to match a Japanese word with its corresponding gesture, guessing from between a choice of two gestures. Participation is completely voluntary, anonymous and confidential. There is no known risk involved in this task. However, for any reason if you feel uncomfortable during the task, you can stop at any stage. In this case though, you won’t be paid the participation fee. -->
+
 <p>私たちは、人々がハンドサインの意味をどれだけ推測できるかに興味があります。この実験では、2つのハンドサインの中から日本語の単語とそれに合ったサインをつなげることをしていただきます。</p>
 <p>この実験への参加は完全に任意であり、匿名かつ秘密厳守です。この実験には既知のリスクはございませんが、何らかの理由で参加中に不快感を感じた場合は、どの段階でも中止することができます。その場合には参加費は支払われません。</p>
